# BudgetAssistant

./: .gitignore  DEV_AUTH_BYPASS_Design_Pattern.md  LICENSE
BudgetAssistant-backend/: Dockerfile-django  create_superuser_if_missing.py  docker-compose.yml  entrypoint.sh  environment.yml  generate_angular_api.ps1  how_to_send_request_to_pagetransactionsview.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
BudgetAssistant-backend-fastapi/: Run-Tests.ps1  alembic.ini  auto_migrate.py  pyproject.toml
BudgetAssistant-backend-fastapi/alembic/: env.py
BudgetAssistant-backend-fastapi/docker/: Dockerfile
BudgetAssistant-backend-fastapi/scripts/: Build-Docker-Image.ps1  Generate-And-Install-Angular-Api.ps1  Link-Client-Library.ps1  Start-Database.ps1  categorize_transactions.py  export_data.py  generate_openapi.py  process_csv.py  read_csv.py  set_budget_amounts.py
BudgetAssistant-backend-fastapi/src/: __init__.py  enums.py  main.py
BudgetAssistant-backend-fastapi/tests/: __init__.py  conftest.py  test_analysis_router.py  test_analysis_schemas.py  test_auth_router.py  test_bank_account_model.py  test_bank_accounts_router.py  test_budget_model.py  test_categories_router.py  test_category_model.py  test_common_schemas.py  test_counterparty_model.py  test_database.py  test_dev_bypass.py  test_enums.py  test_logout.py  test_rule_set_wrapper_model.py  test_schemas.py  test_services.py  test_transaction_model.py  test_transactions_router.py  test_user_model.py  utils.py
BudgetAssistant-backend/.run/: Debug Docker.run.xml  create_superuser_if_missing.run.xml  debug manage.py.run.xml  drf-spectacular.run.xml  manage.py collectstatic.run.xml  manage.py makemigrations.run.xml  manage.py migrate.run.xml  manage.py truncate_tables.run.xml  postgres.run.xml
BudgetAssistant-backend/pybackend/: admin.py  analysis.py  apps.py  asgi.py  categorization.py  commons.py  db.py  dto.py  middleware.py  models.py  period.py  providers.py  rules.py  schema.py  script.py  serializers.py  services.py  settings.py  transactions_parsing.py  urls.py  utils.py  views.py  wsgi.py
BudgetAssistant-backend/scripts/: Build-And-Start-Docker-Image.ps1  Build-Docker-Image.ps1  Fix-Package.ps1  Generate-And-Install-Angular-Api.ps1  Start-Api.ps1  Start-Database.ps1  Start-Dockerized-App.ps1  build-and-start-docker-image.ps1  build-docker-image.ps1  generate_and_install_angular_api.ps1  link-client-library.ps1  parse_pip_packages.py  prefix_name_column.py  process_csv.py  (+1 more)
(+415 files in other folders)
