[project]
name = "budgetassistant-backend"
version = "0.1.0"
description = "FastAPI backend for BudgetAssistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "alembic>=1.14.0",
    "arrow>=1.3.0",
    "networkx==3.4.1",
    "email-validator>=2.3.0",
    "pytest>=9.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
    "polyfactory>=2.18.0",
    "ruff>=0.7.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=4.1.0",
    "pandas>=2.0.0",
    "lxml>=5.0.0",
    "openapi-generator-cli[jdk4py]",
    "factory-boy>=3.3.3",
    "anyio"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
